--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -161,6 +161,8 @@
       href: ../../service-bus-messaging/security-baseline.md
     - name: Service Fabric のベースライン
       href: ../../service-fabric/security-baseline.md
+    - name: Site Recovery のベースライン
+      href: ../../site-recovery/security-baseline.md
     - name: Stream Analytics のベースライン
       href: ../../stream-analytics/security-baseline.md
     - name: Synapse Analytics のセキュリティ ベースライン
