--- a/articles/key-vault/keys/toc.yml
+++ b/articles/key-vault/keys/toc.yml
@@ -16,6 +16,7 @@
     - name: Python
       href: quick-create-python.md
     - name: ARM テンプレート
+      displayName: Resource Manager
       href: quick-create-template.md
 - name: チュートリアル
   items:
