commit translated contents

--- a/articles/cognitive-services/form-recognizer/index.yml
+++ b/articles/cognitive-services/form-recognizer/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: PatrickFarley
   ms.author: pafarley
   ms.date: 09/05/2019
-  ms.openlocfilehash: c6bb89a5153df399a0215fb258fbb74b0adcef36
-  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
+  ms.openlocfilehash: 5f0893f53c18bfeead5135a7ffdbc3d9d806bc79
+  ms.sourcegitcommit: d76108b476259fe3f5f20a91ed2c237c1577df14
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/22/2020
-  ms.locfileid: "92368402"
+  ms.lasthandoff: 10/29/2020
+  ms.locfileid: "92913009"
 landingContent:
 - title: Form Recognizer について
   linkLists:
@@ -131,17 +131,17 @@ landingContent:
     - text: Form Recognizer API v2.0
       url: https://westus2.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2/operations/AnalyzeWithCustomForm
     - text: .NET SDK
-      url: https://docs.microsoft.com/dotnet/api/overview/azure/ai.formrecognizer-readme
+      url: /dotnet/api/overview/azure/ai.formrecognizer-readme
     - text: Python SDK
-      url: https://docs.microsoft.com/en-us/python/api/azure-ai-formrecognizer/?view=azure-python
+      url: /python/api/azure-ai-formrecognizer/?view=azure-python
     - text: Java SDK
-      url: https://docs.microsoft.com/java/api/overview/azure/ai-formrecognizer-readme
+      url: /java/api/overview/azure/ai-formrecognizer-readme
     - text: JavaScript SDK
-      url: https://docs.microsoft.com/javascript/api/overview/azure/ai-form-recognizer-readme
+      url: /javascript/api/overview/azure/ai-form-recognizer-readme
     - text: Azure PowerShell
-      url: https://docs.microsoft.com/powershell/module/az.cognitiveservices/#cognitive_services
+      url: /powershell/module/az.cognitiveservices/#cognitive_services
     - text: Azure コマンド ライン インターフェイス (CLI)
-      url: https://docs.microsoft.com/cli/azure/cognitiveservices#az-cognitiveservices-list
+      url: /cli/azure/cognitiveservices#az-cognitiveservices-list
 - title: ヘルプとフィードバック
   linkLists:
   - linkListType: reference
