--- a/articles/cognitive-services/metrics-advisor/toc.yml
+++ b/articles/cognitive-services/metrics-advisor/toc.yml
@@ -7,8 +7,6 @@
       href: overview.md
 - name: クイックスタート
   items:
-    - name: デモ サイトを調査する
-      href: quickstarts/explore-demo.md
     - name: Web ポータルを使用する
       href: quickstarts/web-portal.md
     - name: REST API の使用
@@ -40,9 +38,9 @@
     - name: Metrics Advisor API
       href: 'https://go.microsoft.com/fwlink/?linkid=2141634'
     - name: Azure CLI リファレンス
-      href: 'https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest#az_cognitiveservices_list'
+      href: /cli/azure/cognitiveservices?view=azure-cli-latest#az_cognitiveservices_list
     - name: PowerShell リファレンス
-      href: 'https://aka.ms/azure-powershell-cognitiveservices'
+      href: /powershell/module/azurerm.cognitiveservices/
 - name: リソース
   items:
     - name: サポートとヘルプのオプション
