commit translated contents

--- a/articles/azure-maps/index.yml
+++ b/articles/azure-maps/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: anastasia-ms
   ms.author: v-stharr
   ms.date: 1/15/2020
-  ms.openlocfilehash: 4a8d05c05f0c6dc357ac8ea8623ab10cae1e4335
-  ms.sourcegitcommit: 4064234b1b4be79c411ef677569f29ae73e78731
+  ms.openlocfilehash: 30606a38660e3113c6dfce4607333ef77584040f
+  ms.sourcegitcommit: dd45ae4fc54f8267cda2ddf4a92ccd123464d411
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/28/2020
-  ms.locfileid: "92895360"
+  ms.lasthandoff: 10/29/2020
+  ms.locfileid: "92927466"
 landingContent:
 - title: Azure Maps について
   linkLists:
@@ -226,6 +226,10 @@ landingContent:
     links:
     - text: Azure Notebooks (Python) を使用した気象データの分析
       url: weather-service-tutorial.md
+  - linkListType: how-to-guide
+    links:
+    - text: リアルタイムの天気予報データを要求する
+      url: how-to-request-weather-data.md
   - linkListType: reference
     links:
     - text: 天気サービス
