--- a/articles/security/index.yml
+++ b/articles/security/index.yml
@@ -14,12 +14,12 @@ metadata:
   ms.author: terrylan
   manager: rkarlin
   ms.date: 08/29/2019
-  ms.openlocfilehash: 6b090cd138b9b85ab05b35fe2993e76a85e9b7e6
-  ms.sourcegitcommit: 693df7d78dfd5393a28bf1508e3e7487e2132293
+  ms.openlocfilehash: 26968a6cdc7682c7e94d3276832ae6cbd418294b
+  ms.sourcegitcommit: 4f4a2b16ff3a76e5d39e3fcf295bca19cff43540
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/28/2020
-  ms.locfileid: "92899241"
+  ms.lasthandoff: 10/30/2020
+  ms.locfileid: "93042734"
 highlightedContent:
   items:
   - title: Azure のセキュリティの概要
@@ -30,7 +30,7 @@ highlightedContent:
     url: ./fundamentals/best-practices-and-patterns.md
   - title: Azure Security Center とは
     itemType: overview
-    url: ../security-center/security-center-intro.md
+    url: ../security-center/security-center-introduction.md
 conceptualContent:
   items:
   - title: 基礎
@@ -52,7 +52,7 @@ conceptualContent:
     - url: ./develop/secure-dev-overview.md
       itemType: overview
       text: 安全な開発のベスト プラクティス
-    - url: ./develop/secure-web-app.md
+    - url: /previous-versions/azure/security/develop/secure-web-app
       itemType: tutorial
       text: セキュリティで保護された Web アプリを開発する
     - url: ./develop/threat-modeling-tool.md
@@ -74,17 +74,17 @@ conceptualContent:
       text: 詳細情報
   - title: シークレットとキー
     links:
-    - url: ../key-vault/key-vault-overview.md
+    - url: ../key-vault/general/overview.md
       itemType: overview
       text: Azure Key Vault とは?
-    - url: ../key-vault/quick-create-cli.md
+    - url: ../key-vault/secrets/quick-create-cli.md
       itemType: quickstart
       text: シークレットの設定と取得
     - url: ../dedicated-hsm/overview.md
       itemType: overview
       text: Azure Dedicated HSM とは何か
     footerLink:
-      url: /azure/key-vault/
+      url: ../key-vault/index.yml
       text: 詳細情報
   - title: データ保護
     links:
@@ -102,7 +102,7 @@ conceptualContent:
       text: 詳細情報
   - title: ID 管理
     links:
-    - url: ./fundamentals/choose-ad-authn.md
+    - url: ../active-directory/hybrid/choose-ad-authn.md
       itemType: concept
       text: 適切な認証方法の選択
     - url: ./fundamentals/steps-secure-identity.md
@@ -126,17 +126,17 @@ conceptualContent:
       itemType: how-to-guide
       text: セキュリティ ポリシーの操作
     footerLink:
-      url: /azure/security-center/
+      url: ../security-center/index.yml
       text: 詳細情報
   - title: IoT セキュリティの監視
     links:
-    - url: ../asc-for-iot/overview.md
+    - url: ../defender-for-iot/overview.md
       itemType: overview
       text: Azure Security Center for IoT の概要
-    - url: ../asc-for-iot/architecture.md
+    - url: ../defender-for-iot/architecture.md
       itemType: how-to-guide
       text: Azure Security Center for IoT のアーキテクチャ
-    - url: ../asc-for-iot/getting-started.md
+    - url: ../defender-for-iot/getting-started.md
       itemType: how-to-guide
       text: Azure Security Center for IoT の使用を開始する
     footerLink:
@@ -154,17 +154,17 @@ conceptualContent:
       itemType: quickstart
       text: Azure Sentinel プレビューでの作業の開始
     footerLink:
-      url: /azure/sentinel/
+      url: ../sentinel/index.yml
       text: 詳細情報
   - title: 脅威の防止
     links:
     - url: ../security-center/security-center-alerts-overview.md
       itemType: concept
       text: Azure Security Center のセキュリティ アラート
-    - url: ../storage/common/storage-advanced-threat-protection.md
+    - url: ../storage/common/azure-defender-storage-configure.md
       itemType: concept
       text: Advanced Threat Protection for Azure Storage
-    - url: ../sql-database/sql-database-threat-detection-overview.md
+    - url: ../azure-sql/database/threat-detection-overview.md
       itemType: concept
       text: Azure SQL Database の Advanced Threat Protection
     footerLink:
@@ -179,7 +179,7 @@ conceptualContent:
       itemType: overview
       text: 管理と監視の概要
     footerLink:
-      url: https://docs.microsoft.com/search/?search=security+audit+log&scope=azure&category=Documentation
+      url: /search/?category=Documentation&scope=azure&search=security%2baudit%2blog
       text: さらに検索
   - title: ネットワークのセキュリティ
     links:
@@ -237,5 +237,5 @@ conceptualContent:
       itemType: overview
       text: Azure Blueprints サービス
     footerLink:
-      url: /azure/governance/
+      url: ../governance/index.yml
       text: 詳細情報
