commit translated contents

--- a/articles/cloudfoundry/toc.yml
+++ b/articles/cloudfoundry/toc.yml
@@ -8,15 +8,15 @@
 - name: チュートリアル
   items:
     - name: Azure での CF の作成
-      href: /azure/cloudfoundry/create-cloud-foundry-on-azure
+      href: ./create-cloud-foundry-on-azure.md
     - name: CF アプリを Azure にデプロイする
-      href: /azure/cloudfoundry/cloudfoundry-deploy-your-first-app
+      href: ./cloudfoundry-deploy-your-first-app.md
     - name: Azure での Cloud Foundry
-      href: /azure/cloudfoundry/cloudfoundry-get-started
+      href: ./cloudfoundry-get-started.md
     - name: CF OMS Nozzle のデプロイ
-      href: /azure/cloudfoundry/cloudfoundry-oms-nozzle
+      href: ./cloudfoundry-oms-nozzle.md
     - name: Cloud Foundry と Azure を統合する
-      href: /azure/cloudfoundry/how-cloud-foundry-integrates-with-azure
+      href: ./how-cloud-foundry-integrates-with-azure.md
 - name: リソース
   items:
     - name: Azure のロードマップ
